# blank_docs

./: main.py  pyproject.toml
ci/: Dockerfile  docker-compose.yaml
templates/: бланк_Массив.docx
