[tool.poetry]
name = "blank-docs"
version = "0.1.0"
description = ""
authors = ["Alex Arseniev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-docx = "^1.1.2"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
